# chimerax-InspectET

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  tool.py
src/cmd/: cmd.py
src/core/: alignment.py
src/ui/: AlignmentTable.py  QAlignmentTableModel.py  main_widget.py
src/util/: s3.py
